Track user sessions via signed cookie

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,11 @@
 fastapi
-uvicorn[standard]
-python-multipart
-pydantic
-langchain
-pdfplumber
-python-docx
-langchain_openai
-redis
 gunicorn
+itsdangerous
+langchain
+langchain_openai
+pdfplumber
+pydantic
+python-docx
+python-multipart
+redis
+uvicorn[standard]
